pyapp_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      containers:
        - name: pingpong
          image: snjy991/pyapp:745590_dev
          resources:
            requests:
              memory: "128Mi"
              cpu: "512m"
            limits:
              memory: "128Mi"
              cpu: "512m"

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /ping
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /ping
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /
              port: 5000
            failureThreshold: 30
            periodSeconds: 10
